fix button info on mobile + safari

--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -12,6 +12,7 @@
     text-align: center;
     border: 1px solid black;
     mix-blend-mode: initial;
+    color: black;
 
     &--small {
         color: white;
@@ -24,6 +25,12 @@
         font-size: 10px;
         font-weight: bold;
         // border-radius: 50%;
+        @media screen and (max-width: 420px) {
+            position: absolute;
+            left: 100%;
+            bottom: 12px;
+        }
+
     }
 
     &:hover {
